# yaleapps

./: .gitignore  .gitmodules  .prettierrc  package.json  pnpm-lock.yaml  quasar.config.ts  tsconfig.json  turbo.json
.devcontainer/: devcontainer.json
apps/auth/: drizzle.config.ts  package.json  wrangler.jsonc
apps/auth-frontend/: README.md  index.html  package.json  vite.config.js
apps/butteries/: 2025-2028_emails.json  2025.csv  2026.csv  2026.json  2027.csv  2028.csv  README.md  components.json  keystore.keystore  package.json  quasar.config.ts  superlatives_2023.json  superlatives_2025.json  upload.keystore
apps/butteries-old/: .gitignore  README.md  android.keystore  index.html  my-release-key.keystore  quasar.config.js
apps/butteurbot/: package.json  wrangler.jsonc  wrangler.toml
apps/course-major-superlatives/: .env.example  database.types.ts  eslint.config.js  package.json  pnpm-lock.yaml  postcss.config.js  quasar.config.ts  wrangler.jsonc
apps/lobby/: .cta.json  README.md  app.config.ts  components.json  index.html  package.json  tsconfig.json  vite.config.js  wrangler.jsonc
apps/lobby-durable-object/: package.json  wrangler.jsonc
apps/lobby-server/: package.json  wrangler.jsonc
apps/locations/: .gitignore  2024_postgrad_survey.py  README.md  app.py  build_city_indexes.py  find_duplicates_by_netid.py  group_people_by_cities.py  new_response.py  package.json  requirements.txt
apps/reviews/: README.md  astro.config.mjs  package.json  (+2 more)
apps/yalies-archive/: import-yalies.py  package.json  pyproject.toml
src-capacitor/: package.json
(+266 files in other folders)
